test/libsolidity/syntaxTests/constructor/interface_constructor_new.sol
interface I {
	constructor() public;
}
// ----
// Warning: (15-36): Functions in interfaces should be declared external.
// TypeError: (15-36): Constructor cannot be defined in interfaces.
// TypeError: (15-36): Constructor must be implemented if declared.
